<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/popup_style"
    android:id="@+id/vue_probleme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:paddingHorizontal="55dp"
    android:clickable="true"
    android:focusable="true"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chakrapetch_medium"
        android:textSize="20sp"
        android:text="@string/title_vue_prob"/>
    <TextView
        android:id="@+id/signaledBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/info_report"
        android:fontFamily="@font/chakrapetch_medium"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/signaledAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signal_at"
        android:fontFamily="@font/chakrapetch_medium"
        android:textSize="20sp"/>
</LinearLayout>